[package]
name = "sos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]

[profile.release]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# These options make running test cases through qemu much more practical
# The timeout automatically stops the run if the test-cases take too long
# Qemu returns 0x10 on Success instead of 0, so we also specify a different exit code for 
# successful tests. The other options allow the test-results to be transmitted over the serial 
# console without ever opening a qemu window
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 30                   # (in seconds)
